@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-2
-Date: 2007-08-14
+Date: 2007-08-16
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
