@@ -165,7 +165,7 @@ setAs("TsparseMatrix", "graphNEL", Tsp2grNEL)
 
 setMethod("[", signature(x = "sparseMatrix", i = "index", j = "missing",
 			 drop = "logical"),
-	  function (x, i, j, drop) {
+	  function (x, i, drop) {
 	      cld <- getClassDef(class(x))
 	      if(!extends(cld, "generalMatrix")) x <- as(x, "generalMatrix")
 	      viaCl <- paste(.M.kind(x, cld), "gTMatrix", sep='')
@@ -177,7 +177,7 @@ setMethod("[", signature(x = "sparseMatrix", i = "index", j = "missing",
 
 setMethod("[", signature(x = "sparseMatrix", i = "missing", j = "index",
 			 drop = "logical"),
-	  function (x, i, j, drop) {
+	  function (x, j, drop) {
 	      cld <- getClassDef(class(x))
 	      if(!extends(cld, "generalMatrix")) x <- as(x, "generalMatrix")
 	      viaCl <- paste(.M.kind(x, cld), "gTMatrix", sep='')
@@ -188,7 +188,7 @@ setMethod("[", signature(x = "sparseMatrix", i = "missing", j = "index",
 
 setMethod("[", signature(x = "sparseMatrix",
 			 i = "index", j = "index", drop = "logical"),
-	  function (x, i, j, drop) {
+	  function (x, i, j, ..., drop) {
 	      cld <- getClassDef(class(x))
 	      ## be smart to keep symmetric indexing of <symm.Mat.> symmetric:
 	      doSym <- (extends(cld, "symmetricMatrix") &&
